Corrigindo erros de sync do git.

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,39 @@
 /Infra/DAL/ORM/Tests/Pactor.Infra.DAL.ORM.Tests.Base/Data/PersonalPlaceDataSet.xsc
 /Infra/DAL/ORM/Tests/Pactor.Infra.DAL.ORM.Tests.Base/Data/PersonalPlaceDataSet.xss
 /Infra/DAL/ORM/Tests/Pactor.Infra.DAL.ORM.Tests/bin/Debug/netcoreapp2.0
-/Infra/Crosscutting/IoC/Tests/Pactor.Infra.Crosscutting.IoC.Tests/bin/Debug/netcoreapp2.0
-/Infra/Crosscutting/Log/Tests/Pactor.Infra.Crosscutting.Log.Tests/bin/Debug/netcoreapp2.0
-/Infra/DAL/ORM/Pactor.Infra.DAL.ORM.Dapper/bin/Debug/netstandard2.0
+/Infra/Crosscutting/IoC/Tests/Pactor.Infra.Crosscutting.IoC.Tests/bin
+/Infra/Crosscutting/Log/Tests/Pactor.Infra.Crosscutting.Log.Tests/bin
+/Infra/DAL/ORM/Pactor.Infra.DAL.ORM.Dapper/bin/
+
+/View/App/PersonalPlaceApp/*~
+/View/App/PersonalPlaceApp/*.sw[mnpcod]
+/View/App/PersonalPlaceApp/*.log
+/View/App/PersonalPlaceApp/*.tmp
+/View/App/PersonalPlaceApp/*.tmp.*
+/View/App/PersonalPlaceApp/log.txt
+/View/App/PersonalPlaceApp/*.sublime-project
+/View/App/PersonalPlaceApp/*.sublime-workspace
+/View/App/PersonalPlaceApp/.vscode/
+/View/App/PersonalPlaceApp/npm-debug.log*
+
+/View/App/PersonalPlaceApp/.idea/
+/View/App/PersonalPlaceApp/.ionic/
+/View/App/PersonalPlaceApp/.sourcemaps/
+/View/App/PersonalPlaceApp/.sass-cache/
+/View/App/PersonalPlaceApp/.tmp/
+/View/App/PersonalPlaceApp/.versions/
+/View/App/PersonalPlaceApp/coverage/
+/View/App/PersonalPlaceApp/dist/
+/View/App/PersonalPlaceApp/node_modules/
+/View/App/PersonalPlaceApp/tmp/
+/View/App/PersonalPlaceApp/temp/
+/View/App/PersonalPlaceApp/platforms/
+/View/App/PersonalPlaceApp/plugins/
+/View/App/PersonalPlaceApp/plugins/android.json
+/View/App/PersonalPlaceApp/plugins/ios.json
+/View/App/PersonalPlaceApp/www/
+/View/App/PersonalPlaceApp/$RECYCLE.BIN/
+
+/View/App/PersonalPlaceApp/.DS_Store
+/View/App/PersonalPlaceApp/Thumbs.db
+/View/App/PersonalPlaceApp/UserInterfaceState.xcuserstate
